--- a/exam/src/scss/common/_reset.scss
+++ b/exam/src/scss/common/_reset.scss
@@ -1,5 +1,5 @@
 body, h1, h2, button, ul, li,
-input ol, p
+input, ol, p
 {
     margin: 0;
     padding: 0;
@@ -17,6 +17,8 @@ button{
     background-color: transparent;
     border: none;
     text-align: inherit;
+    font-size: inherit;
+    color: inherit;
 }
 
 input{
